[package]
name = "dcv-color-primitives"
version = "0.4.1"
edition = "2018"
description = "a library to perform image color model conversion"
license = "MIT-0"
repository = "https://github.com/aws/dcv-color-primitives"
authors = ["Fabio Lagalla <lagfabio@amazon.com>"]
readme = "README.md"
keywords = ["colors", "converter", "rgb", "yuv", "video"]
categories = ["graphics"]

[lib]
name = "dcv_color_primitives"
crate-type = ["staticlib", "rlib"]

[dependencies]
paste = "1.0"
image = "0.24.0"
glob = "0.3.0"
dssim-core = "3.2"
rgb = "0.8.31"

[dev-dependencies]
criterion = "0.3"
itertools = "0.10"
rand = "0.8"

[[bench]]
name = "benches"
harness = false

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[features]
test_instruction_sets = []

[[bin]]
name = "convert"